# heion-assistant

./: .gitignore  ATTRIBUTION_TESTING.md  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/config/: models.json
app/src/main/cpp/: CMakeLists.txt  jnifasttextwrapper.cpp  phonemizer_jni.cpp
app/src/main/cpp/include/espeak-ng/: speak_lib.h
app/src/main/res/drawable/: bg_assistant_panel.xml  bg_bubble_ai.xml  bg_bubble_user.xml  bg_chat_window.xml  bg_chat_window_glass.xml  bg_collapsed_bar.xml  bg_floating_bar.xml  bg_floating_bar_glass.xml  bg_floating_bar_voice.xml  bg_handle.xml  bg_handle_glass.xml  bg_multimodal_button.xml  bg_profile_chip.xml  bg_thought_accent.xml  ic_assistant_spark.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_screen_search.xml
app/src/main/res/layout/: activity_main.xml  activity_model_library.xml  activity_tts_debug.xml  item_message_ai.xml  item_message_user.xml  item_model.xml  item_model_header.xml  overlay_floating_bar.xml  overlay_main.xml  view_multimodal_button.xml  view_profile_chip.xml
app/src/main/res/mipmap-anydpi/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  (+2 more)
config/aboutlibraries/libraries/: espeak_ng.json  fasttext.json  gemma4e2b.json  gemma4e4b.json  kokoro.json  openjtalk.json
gradle/wrapper/: gradle-wrapper.properties
third_party_licenses/: MIT-Robolectric.txt
(+98 files in other folders)
